# SSA

./: .gitignore  LICENSE  pyproject.toml
notebooks/: production_degradation.ipynb  second_order_chemical_reaction.ipynb
src/: __init__.py  gillespieSSA.py  naiveSSA.py
src/ssa/: gillespieSSA.py  naiveSSA.py
test/: test_naive_ssa.py  test_production_degradation.py  test_second_order_chemical_reaction.py
tests/: __init__.py  test_naive_ssa.py  test_production_degradation.py  test_second_order_chemical_reaction.py
